# beautiful-code

./: LICENSE  README.md  image_code.py  requirements.txt  setup.cfg
src/: __main__.py  image_code.py  server.py
src/assets/icons/: README.md
src/assets/imgs/: default-image.json
src/assets/scripts/: app.js
src/assets/styles/: styles.css
src/views/: index.html
tests/: test_image_code.py  test_server.py
