[metadata]
name = beautiful-code
version = 0.0.1
author = MarronEyes
author_email = marounyeux@gmail.com
description = A tool for generating beautiful images of your code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarronEyes/beautiful-code
project_urls =
    Bug Tracker = https://github.com/MarronEyes/beautiful-code/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src